# emoncms_client

./: .env.example  .gitignore  README.md  pyproject.toml
src/: emoncms_client.py  test.py
tests/: get_solar_data_from_cds_api.py  get_solar_thermal_data_from_cds_api.py  migrate_data_from_influxdb.py  test_get_set_data.py
