[project]
name = "emoncms-client"
version = "0.1.0"
description = "Python wrapper for emoncms API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "influxdb-client>=1.48.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
